# SportsBetting

./: .gitignore  .linux_reqs.txt  README.md  dev.sh  main.py  pyproject.toml  requirements.txt
pipeline/db/: __init__.py  sdk.py
pipeline/db/models/: batting.py  init.py  pitching.py
pipeline/db/sql/pybaseball/: __init__.py  db.py  features.py  processed.py  raw.py
research/: data.ipynb  features.ipynb
scripts/: install_reqs.sh  utils.sh
tests/db/: run.py  test_sdk.py
