[project]
name = "sportsbetting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Data Management
    "pandas",
    # Stats
    "statsmodels",
    # Data Sources
    "pybaseball",
    # DB
    "duckdb",
    "pytest",
    "xgboost>=3.0.4",
    "black[jupyter]>=25.1.0",
]

[project.optional-dependencies]
dev = [
    # Jupyter Deps
    "jedi==0.18.2",
]

[project.scripts]
sportsbetting = "pipeline.main:main"

db-setup = "pipeline.db:setup"
db-verify = "pipeline.db:verify"


test-db = "tests.db.run:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*", "tests*"]
